<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_pi_controller</name>
  <version>0.0.0</version>
  <description>ROS2 Package to control Raspberry Pi peripherals</description>
  <maintainer email="andy.ponce@outlook.com">andyp</maintainer>
  <license>Apache License 2.0</license>
  <!-- The following two lines declare the package needs rclpy and std_msgs when its code is executed: -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>rclpy</depend>
  </export>
</package>
